--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,10 @@ jobs:
     steps:
       - name: Build Docker Image
         run: docker build -t myapp:latest .
-      - name: Push Docker Image
+      - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push Docker Image
         run: docker push myapp:latest
