--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-test
     steps:
+      - name: Checking Dockerfile Location
+        run: ls -l Dockerfile
       - name: Build Docker Image
         run: docker build -t myapp:latest .
       - name: Login to DockerHub
