--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+      - name: Checking
+        run: ls
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -22,7 +24,7 @@ jobs:
     needs: build-and-test
     steps:
       - name: Checking Dockerfile Location
-        run: pwd
+        run: ls -R
       - name: Build Docker Image
         run: docker build -t myapp:latest .
       - name: Login to DockerHub
