--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-test
     steps:
-      - name: Checking Dockerfile Location
-        run: ls -R
+      - name: Checkout Code
+        uses: actions/checkout@v3
       - name: Build Docker Image
         run: docker build -t myapp:latest .
       - name: Login to DockerHub
