--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
       - name: Build Docker Image
-        run: docker build -t myapp:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/myapp:latest .
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push Docker Image
-        run: docker push myapp:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
