--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
       - name: ZAP Scan
-        uses: zaproxy/action-full-scan@v0.12.0
+        uses: zaproxy/action-baseline@v0.14.0
         with:
           target: 'https://www.zaproxy.org/'
